Fixed #49, improving font readability.

--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400');
-
 body {
 	max-width: 800px;
 	padding: 3em;
 	margin-left: auto;
 	margin-right: auto;
 
-	font-weight: 300;
-	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 12pt;
-	line-height: 1.75em;
+	font-weight: 400;
+	font-family: "Palatino Linotype", "Georgia", sans-serif;
+	font-size: 14pt;
+	line-height: 2em;
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-    font-weight: 400;
+    font-weight: 600;
+    margin-top: 2em;
 }
 
 strong, b {
@@ -29,5 +28,15 @@ table.text-left td {
 }
 
 p {
-	margin-top: 1em;
+	margin-top: 1.5em;
+	margin-bottom: 1.5em;
+	margin-right: 1.5em;
+}
+
+table p {
+	margin-top: 0em;
+}
+
+li {
+	margin-bottom: 0.5em;
 }
